--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@700&display=swap" rel="stylesheet" />
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <h1 id="level-title">게임을 시작하려면 아무 키나 일단 눌러!</h1>
+    <h1 id="level-title">게임을 시작하려면 게임시작 버튼을 눌러주세요!</h1>
     <div class="container">
       <div lass="row">
         <div type="button" id="green" class="btn green"></div>
@@ -31,5 +31,6 @@
         <div type="button" id="blue" class="btn blue"></div>
       </div>
     </div>
+    <button class="game-start">게임시작</button>
   </body>
 </html>
