--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
       </div>
     </div>
     <button class="game-start">게임시작</button>
+    <div class="rules-container">
+      <div class="rules-title">게임 룰</div>
+      <div class="rules">1. '게임시작' 버튼을 누른다.</div>
+      <div class="rules">2. '깜빡인' 버튼을 누른다.</div>
+      <div class="rules">3. 전에 깜빡였던 버튼과 방금 깜빡인 버튼을 연달아서 누른다.</div>
+      <div class="rules">🥊 레벨 50까지 깨면 기억력 나보다 좋은거 인정 🥊</div>
+    </div>
   </body>
 </html>
